java 9 module-info support